Button40 is now blue

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   .button-40 {
     width: 40%;
+    background-color: blue;
   }
 
   .button-20 {
@@ -55,7 +56,7 @@
 <div class="button-container">
   <button class="button button-40">
     <div class = "buttontext">Graphic</div>
-    <img src = "test.png" class = "image">
+    <img src = "Signatur.png" class = "image">
   </button>
 
   <button class="button button-20">CV</button>
