Changed image + added more images

--- a/index.html
+++ b/index.html
@@ -56,11 +56,18 @@
 <div class="button-container">
   <button class="button button-40">
     <div class = "buttontext">Graphic</div>
-    <img src = "Signatur.png" class = "image">
+    <img src = "3Portfolio.png" class = "image">
   </button>
 
-  <button class="button button-20">CV</button>
-  <button class="button button-40">art</button>
+  <button class="button button-20">
+    <div class = "buttontext">CV</div>
+    <img src = "3Portfolio.png" class = "image">
+  </button>
+  
+  <button class="button button-40">
+    <div class = "buttontext">art</div>
+    <img src = "3Portfolio.png" class = "image">
+  </button>
 </div>
 
 </body>
